 logs/08_26_2023_01_30_33.log/08_26_2023_01_30_33.log
[' 2023-08-26 01:30:34,242 '] 187 werkzeug - INFO -[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://localhost:5000
[' 2023-08-26 01:30:34,243 '] 187 werkzeug - INFO -[33mPress CTRL+C to quit[0m
[' 2023-08-26 01:30:39,217 '] 23 root - INFO -dict {'BusinessTravel': LabelEncoder(), 'Department': LabelEncoder(), 'EducationField': LabelEncoder(), 'Gender': LabelEncoder(), 'MaritalStatus': LabelEncoder(), 'OverTime': LabelEncoder()}
[' 2023-08-26 01:30:39,229 '] 1414 app - ERROR -Exception on /predict [POST]
Traceback (most recent call last):
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 2190, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1486, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1484, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1469, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\app.py", line 51, in predict_attrition
    return render_template('home.html' , result=result)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\templating.py", line 150, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\templates\home.html", line 155, in template
    The Attrition percentage of the Employee is {{result}%}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'
[' 2023-08-26 01:30:39,235 '] 187 werkzeug - INFO -127.0.0.1 - - [26/Aug/2023 01:30:39] "[35m[1mPOST /predict HTTP/1.1[0m" 500 -
[' 2023-08-26 01:30:44,249 '] 23 root - INFO -dict {'BusinessTravel': LabelEncoder(), 'Department': LabelEncoder(), 'EducationField': LabelEncoder(), 'Gender': LabelEncoder(), 'MaritalStatus': LabelEncoder(), 'OverTime': LabelEncoder()}
[' 2023-08-26 01:30:44,273 '] 1414 app - ERROR -Exception on /predict [POST]
Traceback (most recent call last):
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 2190, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1486, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1484, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\app.py", line 1469, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\app.py", line 51, in predict_attrition
    return render_template('home.html' , result=result)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\flask\templating.py", line 150, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\p2env\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\91812\Desktop\DATASCIENCE\End_to_End_Project\Employee_Attrition\templates\home.html", line 155, in template
    The Attrition percentage of the Employee is {{result}%}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'
[' 2023-08-26 01:30:44,279 '] 187 werkzeug - INFO -127.0.0.1 - - [26/Aug/2023 01:30:44] "[35m[1mPOST /predict HTTP/1.1[0m" 500 -
